--- a/css.css
+++ b/css.css
@@ -133,7 +133,7 @@ nav a.active:after {
     width: 400px;
     height: 35px;
     line-height: 35px;
-    margin: 0 0 10px 0;
+    margin: 0 auto 10px auto;
     background-color: #519D9E;
     cursor: pointer;
     color: #eee;
@@ -149,7 +149,7 @@ nav a.active:after {
     width: 35px;
     height: 35px;
     vertical-align: top;
-    margin: 0 15px 0 0;
+    margin-right: 15px;
 }
 
 img {
@@ -158,7 +158,7 @@ img {
 }
 .Chosen {
     position: relative;
-    background-color: #504444;
+    background-color: #376A6B;
     padding-right: 20px;
     z-index: 1000;
     height: 50px;
